--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,30 +26,34 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
+        with:
+          persist-credentials: false
 
       - name: Setup Node.js
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v6
         with:
-          node-version: latest
-          cache: npm
-          cache-dependency-path: ${{ env.BUILD_PATH }}/package-lock.json
+          node-version-file: package.json
+          cache: pnpm
+
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
 
       - name: Install dependencies
-        run: npm install
+        run: pnpm install
 
-      - name: Build
-        run: npm run build
+      - name: Build static site
+        run: pnpm run build
 
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
+      - name: Upload static site
+        uses: actions/upload-pages-artifact@v4
         with:
-          path: ${{ env.BUILD_PATH }}/dist
+          name: github-pages
+          path: dist/
 
   deploy:
     needs: build
 
-    # Grant GITHUB_TOKEN the permissions required to make a Pages deployment
     permissions:
       pages: write # to deploy to Pages
       id-token: write # to verify the deployment originates from an appropriate source
@@ -63,3 +67,5 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
+        with:
+          artifact_name: github-pages
